# tft-advisor

./: .gitignore  README.md  datatft_api.js  fetch_data.js  find_install.js  find_lcu2.ps1  find_lcu5.ps1  find_lockfile_real.js  find_port.ps1  find_port2.ps1  find_proc.ps1  get_cmdline.ps1  index.html  items_zh.json  lcu.js  lcu_connector.js  lcu_connector.py  main.js  package-lock.json  package.json  probe_lcu.js  probe_ports.js  read_lockfile.js  recommender.js
electron/: champion_aliases.json  champions_zh.json  cli.js  debug_hist.js  fetch_champions.js  find_config.js  find_lcu3.ps1  find_lcu4.ps1  find_lockfile.ps1  lcu_test.js  read_lock.ps1  read_lockfile2.js  read_lockfile3.js  set16_champions.json  set16_items.json  set16_traits.json  traits_zh.json
tauri/: .gitignore  package-lock.json  package.json
tauri/src/: index.html
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: main.rs
